# vshieldpy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: api_types.rst  client.rst  conf.py  env_vars.rst  exceptions.rst  index.rst  products.rst  server_params.rst
examples/: EXAMPLES.md  README.md
examples/discord_bot/: main.py  requirements.txt
tests/: client.py  conftest.py  test_api.py  test_billing.py  test_client.py  test_firewall.py  test_servers.py  test_services.py
tests/api_defs/: __init__.py  test_server_stats.py  test_stock_status.py
tests/products/: test_server.py
tests/requests/: test_billing.py  test_firewall.py  test_servers.py  test_services.py  test_system.py
tests/requests/vs_api/: service.py  ws.py
tests/test_api_defs/: test_server_stats.py  test_stock_status.py
tests/test_products/: test_server.py
tests/test_requests/: test_api.py  test_billing.py  test_firewall.py  test_servers.py  test_services.py  test_system.py
tests/test_requests/vs_api/: __init__.py  system.py
tests/vs_api/: __init__.py  billing.py  firewall.py  servers.py  service.py  system.py  ws.py
vshieldpy/: __init__.py  auth.py  client.py  exceptions.py
vshieldpy/api_defs/: __init__.py  auto_renew.py  graphs.py  invoices.py  locations.py  operating_systems.py  paths.py  payment.py  plans.py  request.py  status_codes.py  stocks.py  tasks.py  transactions.py  type_defs.py  uam_status.py
vshieldpy/exceptions/: auth_exceptions.py  base_exception.py  id_exceptions.py  parameter_exceptions.py
vshieldpy/handlers/: __init__.py  billing.py  firewall.py  servers.py  services.py  system.py
vshieldpy/helpers/: __init__.py
vshieldpy/products/: __init__.py  firewall.py  server.py  service.py
