[project]
name = "vshieldpy"
version = "0.0.1"
authors = [{ name = "Tayfun Bocek", email = "tayfunbocek@live.ca" }]
description = "Python library for the vShield API."
requires-python = ">=3.10"
dependencies = ["httpx", "httpx[http2]"]

[project.optional-dependencies]
docs = [
  "sphinx>=3.4.0",
  "sphinx-toolbox",
  "enum-tools",
  "sphinx-rtd-theme",
]
testing = ["Flask>=3.0.2", "anyio>=4.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py312"]
include = '''
(
  ^.*\.py
)
'''

[tool.ruff]
lint.extend-select = ["D", "I"]
lint.extend-ignore = ["D107"]
lint.fixable = ["I001"]
line-length = 88
exclude = ["examples", "docs"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest_env]
VS_API_URL="http://localhost:5000"
VS_API_KEY=1
