[project]
name = "vshieldpy"
version = "0.0.1"
authors = [{ name = "Tayfun Bocek", email = "tayfunbocek@live.ca" }]
description = "Python library for interacting with the vShield API."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers"
]
dependencies = ["httpx[http2]>=0.27.0"]
keywords = ["vshield", "web", "servers", "vps", "virtaul server"]

[project.optional-dependencies]
docs = [
  "sphinx>=3.4.0",
  "sphinx-toolbox>=3.5.0",
  "enum-tools>=0.11.0",
  "sphinx-rtd-theme>=2.0.0",
]
testing = ["Flask>=3.0.2", "anyio[trio]>=4.3.0", "pytest-env>=1.1.3"]
dev = ["vshieldpy[testing]", "ruff"]

[project.urls]
Homepage = "https://github.com/airblast-dev/vshieldpy"
Issues = "https://github.com/airblast-dev/vshieldpy/issues"
Docs = "https://vshieldpy.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py312"]
include = '''
(
  ^.*\.py
)
'''

[tool.ruff]
lint.extend-select = ["D", "I"]
lint.extend-ignore = ["D107"]
lint.fixable = ["I001"]
line-length = 88
exclude = ["examples", "docs"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest_env]
VS_API_URL="http://localhost:5000"
VS_API_KEY=1
